--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 <main class="main">
 
     <div class="heading">
-        <img class="heading__image" src="img/monitor.svg" width="320">
+        <img class="heading__image" src="img/person_browsing.svg" alt="Computer Display" width="320" height="auto">
         <div class="heading__content">
             <h1 class="heading__content__title">Welcome to Computron</h1>
             <span class="heading__content__separator"></span>
             <p class="heading__content__body">
                 <b>Computron</b> is a place where you can find all the tools you need and even some you don't.
-                Here we provide you with links to lots of useful software however we also provide in person service,
+                Here we provide you with links to lots of useful software however we also provide in-person services,
                 training, and repairs to machine networking and other hardware. You can find useful information by
                 navigating through the menus in the navigation bar at the top of this site.
             </p>
         </div>
     </div>
-
+    <p style="text-align: center">INSERT CONTENT</p>
 </main>
 </body>
 </html>
