--- a/index.html
+++ b/index.html
@@ -17,21 +17,34 @@
             Computer/Networking Repairs & Application Training
         </p>
     </div>
-    <nav class="header__nav">
-        <a class="header__nav__item" data-selected href="#" title="Go to the home page">Home</a>
-        <a class="header__nav__item" href="pages/contact.html" title="Go to the home page">Contact</a>
-        <a class="header__nav__item" href="pages/downloads.html" title="Go to the home page">Downloads</a>
-        <a class="header__nav__item" href="pages/tutorials.html" title="Go to the home page">Tutorials</a>
-        <a class="header__nav__item" href="pages/info.html" title="Go to the home page">Information</a>
-        <a class="header__nav__item" href="pages/support.html" title="Go to the home page">Remote Support</a>
+    <nav class="nav">
+        <a class="nav__item" data-selected href="#" title="Go to the home page">
+            Home
+        </a>
+        <a class="nav__item" href="pages/contact.html" title="Go to the home page">
+            Contact
+        </a>
+        <a class="nav__item" href="pages/downloads.html" title="Go to the home page">
+            Downloads
+        </a>
+        <a class="nav__item" href="pages/tutorials.html" title="Go to the home page">
+            Tutorials
+        </a>
+        <a class="nav__item" href="pages/info.html" title="Go to the home page">
+            Information
+        </a>
+        <a class="nav__item" href="pages/support.html" title="Go to the home page">
+            Remote Support
+        </a>
     </nav>
 </header>
 <main class="main">
-
     <div class="heading">
         <img class="heading__image" src="img/person_browsing.svg" alt="Computer Display" width="320" height="auto">
         <div class="heading__content">
-            <h1 class="heading__content__title">Welcome to Computron</h1>
+            <h1 class="heading__content__title">
+                Welcome to Computron
+            </h1>
             <span class="heading__content__separator"></span>
             <p class="heading__content__body">
                 <b>Computron</b> is a place where you can find all the tools you need and even some you don't.
