--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/Computron/favicon.ico"><title>computron</title><link href="/Computron/css/app.b9c96a1d.css" rel="preload" as="style"><link href="/Computron/js/app.7f4408ee.js" rel="preload" as="script"><link href="/Computron/js/chunk-vendors.c128ecd8.js" rel="preload" as="script"><link href="/Computron/css/app.b9c96a1d.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but computron doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/Computron/js/chunk-vendors.c128ecd8.js"></script><script src="/Computron/js/app.7f4408ee.js"></script></body></html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/Computron/favicon.ico"><title>computron</title><script>// Single Page Apps for GitHub Pages
+        // MIT License
+        // https://github.com/rafgraph/spa-github-pages
+        // This script checks to see if a redirect is present in the query string,
+        // converts it back into the correct url and adds it to the
+        // browser's history using window.history.replaceState(...),
+        // which won't cause the browser to attempt to load the new url.
+        // When the single page app is loaded further down in this file,
+        // the correct url will be waiting in the browser's history for
+        // the single page app to route accordingly.
+        (function (l) {
+            if (l.search[1] === '/') {
+                var decoded = l.search.slice(1).split('&').map(function (s) {
+                    return s.replace(/~and~/g, '&')
+                }).join('?');
+                window.history.replaceState(null, null,
+                    l.pathname.slice(0, -1) + decoded + l.hash
+                );
+            }
+        }(window.location))</script><link href="/Computron/css/app.4cb4e39b.css" rel="preload" as="style"><link href="/Computron/js/app.32161c0b.js" rel="preload" as="script"><link href="/Computron/js/chunk-vendors.8c8f9596.js" rel="preload" as="script"><link href="/Computron/css/app.4cb4e39b.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but computron doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/Computron/js/chunk-vendors.8c8f9596.js"></script><script src="/Computron/js/app.32161c0b.js"></script></body></html>
