deploy: a5048842b1efd4db7124f5e0491c5dc2d47aaa7b

--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/Computron/favicon.ico"><title>computron</title><script>// Single Page Apps for GitHub Pages
-        // MIT License
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="author" content="Jacob Read"><meta name="description" content="Computron offers computer/networking repairs, Helpful download links to everyday software, and provides training for computers & applications"><meta name="keywords" content="computers,networking,repairs,software,downloads,training"><meta property="og:title" content="Computron"><meta property="og:type" content="website"><meta property="og:description" content="Computron offers computer/networking repairs, Helpful download links to everyday software, and provides training for computers & applications"><link rel="icon" href="/Computron/favicon.ico"><title>Computron - Computer/Networking Repairs & Application Training</title><script>// Single Page Apps for GitHub Pages MIT License
         // https://github.com/rafgraph/spa-github-pages
-        // This script checks to see if a redirect is present in the query string,
-        // converts it back into the correct url and adds it to the
-        // browser's history using window.history.replaceState(...),
-        // which won't cause the browser to attempt to load the new url.
-        // When the single page app is loaded further down in this file,
-        // the correct url will be waiting in the browser's history for
-        // the single page app to route accordingly.
         (function (l) {
             if (l.search[1] === '/') {
                 var decoded = l.search.slice(1).split('&').map(function (s) {
                     return s.replace(/~and~/g, '&')
                 }).join('?');
-                window.history.replaceState(null, null,
-                    l.pathname.slice(0, -1) + decoded + l.hash
-                );
+                window.history.replaceState(null, null, l.pathname.slice(0, -1) + decoded + l.hash);
             }
-        }(window.location))</script><link href="/Computron/css/app.c10a037d.css" rel="preload" as="style"><link href="/Computron/js/app.bf904cd2.js" rel="preload" as="script"><link href="/Computron/js/chunk-vendors.1a7dd2c9.js" rel="preload" as="script"><link href="/Computron/css/app.c10a037d.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but computron doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/Computron/js/chunk-vendors.1a7dd2c9.js"></script><script src="/Computron/js/app.bf904cd2.js"></script></body></html>
+        }(window.location))</script><link href="/Computron/css/app.c10a037d.css" rel="preload" as="style"><link href="/Computron/js/app.bf904cd2.js" rel="preload" as="script"><link href="/Computron/js/chunk-vendors.1a7dd2c9.js" rel="preload" as="script"><link href="/Computron/css/app.c10a037d.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but Computron doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/Computron/js/chunk-vendors.1a7dd2c9.js"></script><script src="/Computron/js/app.bf904cd2.js"></script></body></html>
