--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Computron" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Computron offers computer/networking repairs, Helpful download links to everyday software, and provides training for computers & applications" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Computron - Computer/Networking Repairs & Application Training</title>
     <script type="text/javascript">
